# ggml

./: .gitignore  Notes.md
examples/: CMakeLists.txt
examples/alex-jina-v3/: README.md  jina_v3.mermaid  process_jina_v3.py
examples/alex-jina-v3/jina_xlm_roberta/: modeling_lora.py  modeling_xlm_roberta.py
examples/alex-mlp/: CMakeLists.txt  README.md  main-ctx.cpp
examples/alex-mlp/model/: mlp.gguf  two_layer_mlp.pth
examples/simple/: simple-ctx.cpp
